--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ publish_to: none
 description: iOS implementation of the camera plugin.
 repository: https://github.com/flutter/packages/tree/main/packages/camera/camera_avfoundation
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+camera%22
-version: 0.9.17+3
+version: 0.9.17+4
 
 environment:
   sdk: ">=3.3.1 <4.0.0"
@@ -29,8 +29,8 @@ dev_dependencies:
   build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
-  mockito: 5.4.4
-  pigeon: ^18.0.0
+  mockito: ^5.4.4
+  pigeon: ^22.4.2
 
 topics:
   - camera
