--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+
 version: 0.9.17+5
 
 environment:
-  sdk: ">=3.3.1 <4.0.0"
-  flutter: ">=3.19.3"
+  sdk: ^3.4.0
+  flutter: ">=3.22.0"
 
 flutter:
   plugin:
