--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,19 +14,14 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../
-  camera_platform_interface: 
-    git: https://github.com/kumsumit/camera_platform_interface.git
+  camera_platform_interface: ^2.7.0
   flutter:
     sdk: flutter
-  path_provider:
-    git: https://github.com/kumsumit/path_provider.git
-  quiver: ^3.0.0
-  video_player: 
-    git: https://github.com/kumsumit/video_player.git
-
+  path_provider: ^2.0.0
+  video_player: ^2.7.0
 
 dev_dependencies:
-  build_runner: ^2.4.8
+  build_runner: ^2.1.10
   flutter_test:
     sdk: flutter
   integration_test:
