--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: iOS implementation of the camera plugin.
 repository: https://github.com/flutter/packages/tree/main/packages/camera/camera_avfoundation
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+camera%22
 version: 0.9.17+5
+publish_to: none
 
 environment:
   sdk: ^3.4.0
@@ -17,7 +18,8 @@ flutter:
         dartPluginClass: AVFoundationCamera
 
 dependencies:
-  camera_platform_interface: ^2.7.0
+  camera_platform_interface:
+    git: https://github.com/kumsumit/camera_platform_interface.git
   flutter:
     sdk: flutter
   stream_transform: ^2.0.0
