--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: camera_example
+name: camera_avfoundation_example
 description: Demonstrates how to use the camera plugin.
 publish_to: none
 
@@ -8,14 +8,9 @@ environment:
 
 dependencies:
   camera_avfoundation:
-    # When depending on this package from a real application you should use:
-    #   camera_avfoundation: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
     path: ../
   camera_platform_interface:
-    path: ../../camera_platform_interface
+    git: https://github.com/kumsumit/camera_platform_interface.git
   flutter:
     sdk: flutter
   path_provider:
